@@ -70,6 +70,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1631" tool="jira">
+                    <description>
+		                Added support for XML schema type 'unsignedByte' to XML code generator.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20061018</date>
+                </bug>
                 <bug id="1630" tool="jira">
                     <description>
 		                Added support for XML schema type 'unsignedShort' to XML code generator.
