@@ -57,7 +57,7 @@ import java.util.Enumeration;
  * @author <a href="mailto:blandin@intalio.com">Arnaud Blandin</a>
  * @version $Revision$ $Date: 2006-04-25 15:08:23 -0600 (Tue, 25 Apr 2006) $
 **/
-public final class XSByte extends XSPatternBase {
+public class XSByte extends XSPatternBase {
 
     //- Constraints for Byte type
     Byte maxInclusive = null;
