@@ -16,24 +16,23 @@
 package org.exolab.castor.builder.types;
 
 /**
- * The XML Schema "unsigned-short" type
+ * The XML Schema "unsigned-byte" type
  * 
  * @author <a href="mailto:werner DOT guttmann AT gmx DOT net">Werner Guttmann</a>
  * @version $Revision: 5951 $ $Date: 2005-12-13 14:58:48 -0700 (Tue, 13 Dec
  *          2005) $
  */
-public final class XSUnsignedShort extends XSInteger {
-
-    public XSUnsignedShort() {
+public final class XSUnsignedByte extends XSShort {
+    public XSUnsignedByte() {
         super();
-        setMinInclusive(0);
-        setMaxInclusive(65535);
+        setMinInclusive((short) 0);
+        setMaxInclusive((short) 255);
     }
 
-    public XSUnsignedShort(boolean asWrapper) {
+    public XSUnsignedByte(boolean asWrapper) {
         super(asWrapper);
-        setMinInclusive(0);
-        setMaxInclusive(65535);
+        setMinInclusive((short) 0);
+        setMaxInclusive((short) 255);
     }
 
 }
