@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1631 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for XML schema type 'unsignedByte' to XML code generator.
+       Details: http://jira.codehaus.org/browse/CASTOR-1631
+       (Werner - 20061018)
+
 XML:   Resolved issue CASTOR-1630 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added support for XML schema type 'unsignedShort' to XML code generator.
        Details: http://jira.codehaus.org/browse/CASTOR-1630
